logs/imagesocket.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ImageSocket'...
Compiling './lib/python3.5/site-packages/ImageSocket/ImageSocket.py'...
***   File "./lib/python3.5/site-packages/ImageSocket/ImageSocket.py", line 176
    print "arr[", i, "]: ", data[i], "\tASCII: ", ord(data[i])
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ImageSocket/__init__.py'...
***   File "./lib/python3.5/site-packages/ImageSocket/__init__.py", line 20
    print "?"
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ImageSocket/logg.py'...
***   File "./lib/python3.5/site-packages/ImageSocket/logg.py", line 26
    print "--< ImageSocket >--   :", string
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ImageSocket/rtp.py'...
***   File "./lib/python3.5/site-packages/ImageSocket/rtp.py", line 69
    print "Haven't call decodeArr"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ImageSocket/test_udp.py'...
***   File "./lib/python3.5/site-packages/ImageSocket/test_udp.py", line 13
    print "Wait for the image..."
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ImageSocket/work.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (work.py, line 78)
Listing './lib/python3.5/site-packages/ImageSocket-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
